kind-goodnotes-k8s-demo/apps/foo/deployment-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: apps
  labels: { app: http-echo, variant: foo }
spec:
  replicas: 6
  selector: { matchLabels: { app: http-echo, variant: foo } }
  template:
    metadata:
      labels: { app: http-echo, variant: foo }
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0.0
          args: ["-text=foo", "-listen=:5678"]
          ports:
            - containerPort: 5678
          readinessProbe:
            httpGet: { path: "/", port: 5678 }
            initialDelaySeconds: 1
            periodSeconds: 2
          resources:
            requests: { cpu: "10m", memory: "16Mi" }
            limits:   { cpu: "200m", memory: "64Mi" }
