kind-goodnotes-k8s-demo/apps/foo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: apps
spec:
  selector: { app: http-echo, variant: foo }
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 5678
